flaskでchartを表示できるようにした

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="{{ url_for('index') }}">home</a></li>
         <li><a href="{{ url_for('page1') }}">page 1</a></li>
+        <li><a href="{{ url_for('chart') }}">円グラフ見る</a></li>
         <li><a href="https://twitter.com/"  target="_blank">Twitterを見てみる</a></li>
         <li><a href="https://www.instagram.com/"  target="_blank">Instagramを見てみる</a></li>
     </ul>
