--- a/templates/chart.html
+++ b/templates/chart.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="static/style.css" type="text/css">
   </head>
   <body>
     <canvas id="myChart"></canvas>
-    <script src="Chart.js"></script>
+    <a>hello</a>
+    <script src="static/js/Chart.js" type="text/javascript"></script>
     <script>
          new Chart(document.getElementById("myChart"), {
            type: "doughnut",
