--- a/templates/chart.html
+++ b/templates/chart.html
@@ -6,16 +6,34 @@
   </head>
   <body>
     <canvas id="myChart"></canvas>
-    <a>hello</a>
+    <h1>円グラフ表示してる</h1>
+    <form name="form1" id="id_form" onsubmit="return onButtonSubmit();">
+      <span>検索ワード入力:</span>
+      <input type="text" name="inputboxname" size="20" id="id_textBox" value="" >
+      <input type="submit" value="送信">
+    </form>
     <script src="static/js/Chart.js" type="text/javascript"></script>
     <script>
-         new Chart(document.getElementById("myChart"), {
+         var positiveValue = 1;
+         function onButtonSubmit(){
+             positiveValue = parseFloat(document.form1.inputboxname.value);
+             console.log(document.form1.inputboxname.value);
+             console.log("aaaa")
+             chart.data.datasets[0].data[0] = positiveValue;
+             chart.update();
+             return false;
+          }
+         //var positiveValue = 2;//document.id_form.id_textBox.value;
+         var neutralValue = 1;
+         var negativeValue = 1;
+
+         var chart = new Chart(document.getElementById("myChart"), {
            type: "doughnut",
            data: {
              labels: ["ポジティブ","中立","ネガティブ"],
              datasets: [
                {
-                 data: [Math.random(), Math.random(), Math.random()],
+                 data: [positiveValue, neutralValue, negativeValue], //本当はMath.random()
                  backgroundColor: [
                    "rgb(255, 99, 132)",
                    "rgb(154,130,183)",
@@ -26,5 +44,6 @@
            }
          });
     </script>
+    <h1><a href="{{ url_for('index') }}">戻る</a></h1>
   </body>
 </html>
