棒グラフ追加

--- a/templates/chart.html
+++ b/templates/chart.html
@@ -5,29 +5,31 @@
     <link rel="stylesheet" href="static/style.css" type="text/css">
   </head>
   <body>
-    <canvas id="myChart"></canvas>
+    <canvas id="myPiechart"></canvas>
     <h1>円グラフ表示してる</h1>
     <form name="form1" id="id_form" onsubmit="return onButtonSubmit();">
       <span>検索ワード入力:</span>
       <input type="text" name="inputboxname" size="20" id="id_textBox" value="" >
       <input type="submit" value="送信">
     </form>
+    <canvas id="myBargraph">
     <script src="static/js/Chart.js" type="text/javascript"></script>
     <script>
          var positiveValue = 1;
+         var neutralValue = 1;
+         var negativeValue = Math.random();
          function onButtonSubmit(){
              positiveValue = parseFloat(document.form1.inputboxname.value);
              console.log(document.form1.inputboxname.value);
              console.log("aaaa")
-             chart.data.datasets[0].data[0] = positiveValue;
-             chart.update();
+             piechart.data.datasets[0].data[0] = positiveValue;
+             barchart.data.datasets[0].data[0] = positiveValue;
+             piechart.update();
+             barchart.update();
              return false;
           }
-         //var positiveValue = 2;//document.id_form.id_textBox.value;
-         var neutralValue = 1;
-         var negativeValue = 1;
 
-         var chart = new Chart(document.getElementById("myChart"), {
+         var piechart = new Chart(document.getElementById("myPiechart"), {
            type: "doughnut",
            data: {
              labels: ["ポジティブ","中立","ネガティブ"],
@@ -42,6 +44,65 @@
                }
              ]
            }
+         })
+
+        var barchart = new Chart(document.getElementById("myBargraph"),{
+             type: "bar",
+             data:{
+               labels: ['1位','2位','3位'],
+               datasets: [{
+                 data: [positiveValue ,Math.random(),Math.random()],
+                 backgroundColor: ['#FF4444', '#4444FF', '#44BB44', '#FFFF44', '#FF44FF']
+               }]
+             },
+             options:{
+               responsive: true,
+               lengends:{
+                 display: false
+               },
+               title:{
+                 display: true,
+                 fontSize: 18,
+                 text: 'タイトル'
+               },
+               scales: {
+                 yAxis:[{
+                   display: true,
+                   scaleLabel:{
+                     display: true,
+                     labelString: '縦軸ラベル',
+                     fontSize: 18
+                   },
+                   ticks:{
+                     min: 0,
+                     max: 30,
+                     fontSize: 18,
+                     stepSize: 5
+                   },
+                }],
+                xAxes: [{                         //x軸設定
+                  display: true,                //表示設定
+                  barPercentage: 0.4,           //棒グラフ幅
+                  categoryPercentage: 0.4,      //棒グラフ幅
+                  scaleLabel: {                 //軸ラベル設定
+                     display: true,             //表示設定
+                     labelString: '横軸ラベル',  //ラベル
+                     fontSize: 18               //フォントサイズ
+                  },
+                  ticks: {
+                      fontSize: 18             //フォントサイズ
+                  },
+                }],
+              },
+              layout: {
+                padding: {                          //余白設定
+                    left: 100,
+                    right: 50,
+                    top: 0,
+                    bottom: 0
+                }
+              }
+             }
          });
     </script>
     <h1><a href="{{ url_for('index') }}">戻る</a></h1>
