--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>home</title>
 </head>
 <body>
-    <p>Hello {{ message }}  !!!</p>
+    <p>Hello!!!</p>
     <ul>
         <li><a href="{{ url_for('index') }}">home</a></li>
         <li><a href="{{ url_for('chart') }}">円グラフ見る</a></li>
