--- a/templates/chart.html
+++ b/templates/chart.html
@@ -6,15 +6,29 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   </head>
   <body>
-    <li><a href="{{ url_for('index') }}">戻る</a></li>
-    <canvas id="myPiechart"></canvas>
-    <h1>円グラフ表示してる</h1>
-    <form action="./get_post" name="form1" onsubmit="return onButtonSubmit();">
-      <span>検索ワード入力:</span>
-      <input type="text" name="inputboxname" size="20" value="" >
-      <input type="submit" value="送信">
-    </form>
-    <canvas id="myBargraph">
+    <header>
+      <h1>Watch Emotion on SNS</h1>
+      <form action="./get_post" name="form1" onsubmit="return onButtonSubmit();">
+        <span>検索ワード入力:</span>
+        <input type="text" name="inputboxname" size="20" value="" >
+        <input type="submit" value="送信">
+      </form>
+    </header>
+    <div class="Body">
+      <div class="eachBody twitterBody" >
+        <canvas id="myPiechart"></canvas>
+        <canvas id="myBargraph"></canvas>
+      </div>
+      <div class="eachBody instaBody">
+        <canvas id="myPiechart"></canvas>
+        <canvas id="myBargraph"></canvas>
+      </div>
+    </div>
+    <footer>
+      <p>created by teamC</p>
+      <a href="https://twitter.com/"  target="_blank">Twitterを見てみる</a>
+      <a href="https://www.instagram.com/"  target="_blank">Instagramを見てみる</a>
+    </footer>
     <script src="static/js/Chart.js" type="text/javascript"></script>
     <script src="static/js/Function.js" type="text/javascript"></script>
   </body>
