--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
     </header>
     <div class="allBody">
       <div id="twitterBody" >
+        <p>Twitter</p>
         <div class="chart">
           <canvas id="twitterPiechart"></canvas>
         </div>
@@ -24,6 +25,7 @@
         </div>
       </div>
       <div id="instaBody">
+        <p>Instagram</p>
         <div class="chart">
           <canvas id="instaPiechart"></canvas>
         </div>
