--- a/static/style.css
+++ b/static/style.css
@@ -46,7 +46,7 @@ a {
 a:hover {
     background: #0090aa;
 } */
-.allBody{
+#allBody{
   padding: 20px;
 }
 #twitterBody{
@@ -77,4 +77,22 @@ a:hover {
   .wrapper {
     display: flex;
   }
+}
+#loading {
+  display: table;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  opacity: 0.8;
+}
+
+#loading .loadingMsg {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+  padding-top: 140px;
+  background: url("gif-load.gif") center center no-repeat;
 }
