--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>Watch Emotion on SNS</h1>
-      <form action="./get_post" name="form1" onsubmit="return onButtonSubmit();">
+      <form action="./get_post" name="form1" onsubmit="return onButtonTwitter(), onButtonInstagram();">
         <span>検索ワード入力:</span>
         <input type="text" name="inputboxname" size="20px" value="" >
         <input type="submit" value="送信">
@@ -44,7 +44,7 @@
       <p id="teamC">created by teamC</p>
     </footer>
     <script src="static/js/Chart.js" type="text/javascript"></script>
-    <script src="static/js/TwitterFunc.js" type="text/javascript"></script>
     <script src="static/js/InstaFunc.js" type="text/javascript"></script>
+    <script src="static/js/TwitterFunc.js" type="text/javascript"></script>
   </body>
 </html>
