--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <header>
-      <h1>Watch Emotion on SNS</h1>
-      <form action="./get_post" name="form1" onsubmit="return onButtonSubmit();">
+      <h1>Watch Emotions on SNS</h1>
+      <form action="./get_post" name="form1" onsubmit="return onButtonTwitter(), onButtonInstagram();">
         <span>検索ワード入力:</span>
         <input type="text" name="inputboxname" size="20px" value="" >
         <input type="submit" value="送信">
