全体円グラフ足した

--- a/static/style.css
+++ b/static/style.css
@@ -16,7 +16,7 @@ h2 {
   color: #dc8a07;
   font-size: 20px;
   padding: 10px 0 0 0;
-  font-family: 'Alegreya Sans SC', sans-serif;
+  font-family: "Hiragino Kaku Gothic ProN","メイリオ", sans-serif;
 }
 
 /* div{
