--- a/templates/index.html
+++ b/templates/index.html
@@ -22,29 +22,40 @@
         <a>Twitter</a>
         <div class="chart">
           <canvas id="twitterPiechart"></canvas>
+          <h2>検索ワード感情分析</h2>
+        </div>
+        <div class="chart">
+          <canvas id="LatestTwitterPiechart"></canvas>
+          <h2>タイムライン全体分析</h2>
         </div>
         <div class="chart">
           <canvas id="twitterBargraph"></canvas>
+          <h2>関連ワードランキング</h2>
         </div>
-        <h2 href="https://twitter.com/">Twitterを見てみる</h2>
       </div>
       <div id="instaBody">
         <img src="static/instagram_newlogo.png" width=64px height=48px>
         <a id="instaTitle">Instagram</a>
         <div class="chart">
           <canvas id="instaPiechart"></canvas>
+          <h2>検索ワード感情分析</h2>
+        </div>
+        <div class="chart">
+          <canvas id="LatestInstaPiechart"></canvas>
+          <h2>タイムライン全体分析</h2>
         </div>
         <div class="chart">
           <canvas id="instaBargraph"></canvas>
+          <h2>関連ワードランキング</h2>
         </div>
-        <h2 href="https://www.instagram.com/">Instagramを見てみる</h2>
       </div>
     </div>
     <footer>
-      <p id="teamC">created by teamC</p>
+      <p id="teamC">created by team B</p>
     </footer>
     <script src="static/js/Chart.js" type="text/javascript"></script>
     <script src="static/js/TwitterFunc.js" type="text/javascript"></script>
     <script src="static/js/InstaFunc.js" type="text/javascript"></script>
+    <script src="static/js/LatestPiechart.js" type="text/javascript"></script>
   </body>
 </html>
