--- a/static/style.css
+++ b/static/style.css
@@ -18,12 +18,45 @@ h2 {
   padding: 10px 0 0 0;
   font-family: "Hiragino Kaku Gothic ProN","メイリオ", sans-serif;
 }
+.search_input_label{
+  color: #dc8a07;
+  font-size: 15px;
+  padding: 10px 0 0 0;
+  font-family: "Hiragino Kaku Gothic ProN","メイリオ", sans-serif;
+}
+.square_btn {
+    width: 50px;
+    height: 40px;
+    display: inline-block;
+    padding: 0.3em 1em;
+    text-decoration: none;
+    color: black;
+    border: solid 2px #dc8a07;
+    border-radius: 3px;
+    transition: .4s;
+}
 
-/* div{
-   border-radius: 6px;
-   margin: 10px auto;
-   padding: 20px;
-} */
+.square_btn:hover {
+    background: #dc8a07;
+    color: white;
+}
+
+.input_text{
+  border:0;
+  padding:10px;
+  font-size:1.3em;
+  font-family:Arial, sans-serif;
+  color:#dc8a07;
+  border:solid 1px #dc8a07;
+  margin:0 0 20px;
+  width:300px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -moz-box-shadow: inset 0 0 4px rgba(0,0,0,0.2);
+  -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.2);
+  box-shadow: inner 0 0 4px rgba(0, 0, 0, 0.2);
+}
 #teamC {
     padding-right: 40px;
     padding-right: 40px;
