--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,9 @@
     <header>
       <h1>Watch Emotions on SNS</h1>
       <form action="./get_post" name="form1" onsubmit="return onButtonTwitter(), onButtonInstagram();">
-        <span>検索ワード入力:</span>
-        <input type="text" name="inputboxname" size="20px" value="" >
-        <input type="submit" value="送信">
+        <span class="search_input_label">検索ワード入力:</span>
+        <input type="text" class="input_text" name="inputboxname" size="20px" value="" >
+        <input type="submit" value="送信" class="square_btn">
       </form>
     </header>
     <div class="allBody">
